--- a/web/themes/custom/civics/assets/sass/_uswds-theme-color.scss
+++ b/web/themes/custom/civics/assets/sass/_uswds-theme-color.scss
@@ -35,25 +35,25 @@ $theme-color-base-darkest: "gray-90";
 $theme-color-base-ink: "gray-90";
 
 // Primary colors
-$theme-color-primary-family: "blue";
+$theme-color-primary-family: "red";
 $theme-color-primary-lightest: false;
-$theme-color-primary-lighter: "blue-10";
-$theme-color-primary-light: "blue-30";
-$theme-color-primary: "blue-60v";
-$theme-color-primary-vivid: "blue-warm-60v";
-$theme-color-primary-dark: "blue-warm-70v";
-$theme-color-primary-darker: "blue-warm-80v";
+$theme-color-primary-lighter: "red-10";
+$theme-color-primary-light: "red-30";
+$theme-color-primary: "red-60v";
+$theme-color-primary-vivid: "red-warm-60v";
+$theme-color-primary-dark: "red-warm-70v";
+$theme-color-primary-darker: "red-warm-80v";
 $theme-color-primary-darkest: false;
 
 // Secondary colors
-$theme-color-secondary-family: "red";
+$theme-color-secondary-family: "blue";
 $theme-color-secondary-lightest: false;
-$theme-color-secondary-lighter: "red-cool-10";
-$theme-color-secondary-light: "red-30";
-$theme-color-secondary: "red-50";
-$theme-color-secondary-vivid: "red-cool-50v";
-$theme-color-secondary-dark: "red-60v";
-$theme-color-secondary-darker: "red-70v";
+$theme-color-secondary-lighter: "blue-cool-10";
+$theme-color-secondary-light: "blue-30";
+$theme-color-secondary: "blue-50";
+$theme-color-secondary-vivid: "blue-cool-50v";
+$theme-color-secondary-dark: "blue-60v";
+$theme-color-secondary-darker: "blue-70v";
 $theme-color-secondary-darkest: false;
 
 // Accent warm colors
