Fix button color bug.

--- a/web/themes/custom/civics/assets/sass/_uswds-theme-color.scss
+++ b/web/themes/custom/civics/assets/sass/_uswds-theme-color.scss
@@ -132,7 +132,7 @@ General colors
 
 // Links
 $theme-link-color: "primary";
-$theme-link-visited-color: "violet-70v";
+$theme-link-visited-color: "primary";
 $theme-link-hover-color: "primary-dark";
 $theme-link-active-color: "primary-darker";
 $theme-link-reverse-color: "base-lighter";
